Update stylesheet spacing fix

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ body > footer > button {
 #sidebar > ul {
 	background-color: #fafafa;
 	list-style: none;
-	padding: var(--spacing);
+	padding: 0 var(--spacing);
 	display: flex;
 	flex-direction: column;
 	gap: var(--spacing);
